extends Control


func _on_standard_pressed() -> void:
	get_tree().change_scene_to_file("res://board.tscn")

func _on_tamerlane_pressed() -> void:
	pass # Replace with function body.


func _on_total_war_pressed() -> void:
	pass # Replace with function body.


func _on_fisher_pressed() -> void:
	pass # Replace with function body.
